--- a/style.css
+++ b/style.css
@@ -214,11 +214,12 @@ body {
   box-shadow: 0 2px 6px rgba(241, 66, 66, 0.1);
 }
 .backButton:hover {
-  background-color: #3d353d;
+  background-color:var(--base-variant);
   box-shadow: 0 0 8px rgba(200, 220, 233, 0.4);
 }
 .borderCountryButton {
-  margin: 0.3rem 0 0.3rem 0.8rem;
+  margin-right: 15px;
+  margin-top: 10px;
   font-size: 14px;
 }
 .borderCountryButton:hover {
